Properly serialize the JDK immutable Set instances